<resources>
    <string name="app_name">Lynqfy Example</string>
    <string name="title">Connect wallet</string>
    <string name="helper">Why do I need to connect with my wallet?</string>
    <string name="body">Connect with one of our available wallet providers or create a new one.</string>
    <string name="author_text">Android developer</string>
    <string name="author_name">Tom</string>
    <string name="testimonial">testimonial</string>
    <string name="title_activity_date_picker">DatePickerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="show_list">Show List</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_badge">TermeBadge</string>
    <string name="menu_skeleton">TermeSkeleton</string>
    <string name="menu_speed_dial">TermeSpeedDial</string>


    <string name="user_0_name">Reynold Arnold</string>
    <string name="user_0_statement">If it fails, we can rewrite it</string>
    <string name="user_1_name">Brando Rambo</string>
    <string name="user_1_statement">When you\'re pushed, build breaking\'s as easy as breathing</string>
    <string name="user_2_name">Phyllis Willis</string>
    <string name="user_2_statement">Wrong girl in the wrong program at the wrong line</string>
    <string name="editor">Value editor</string>
    <string name="mask_color">Mask color</string>
    <string name="mask_corner_radius">Mask corner radius (%d)</string>
    <string name="shimmer_color">Shimmer color</string>
    <string name="shimmer_duration">Shimmer duration (%d ms)</string>
    <string-array name="shimmer_directions">
        <item>Left-to-right</item>
        <item>Right-to-left</item>
    </string-array>
    <string name="shimmer_angle">Shimmer angle (%d°)</string>
    <string name="shimmer_show">Show shimmer</string>
    <string name="toggle">Toggle skeleton</string>

</resources>